Display variable values

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-K3TDRBB');</script>
 <!-- End Google Tag Manager -->
+<!-- Create and add values for dataLayer -->
   <script>
   keyparam = Request.QueryString(key)
   valueparam = Request.QueryString(value)
@@ -22,7 +23,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K3TDRBB"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+<!-- Web Page Display -->
 <h1>Impact Test Page</h1>
 <p>Impact Tech Test</p>
+<p>keyparam</p>
+<p>valueparam</p>
 </body>
 </html>
