--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <p>Impact Tech Test</p>
 <p>keyparam</p>
 <p>valueparam</p>
+<button>Fire API GET</button>
 </body>
 </html>
