--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       'value': valueparam
     }];
   </script>
+<!--onclick for button -->
+  <script>
+  function fireAPI(key, value){
+    var request = new XMLHttpRequest()
+    request.open('GET', 'http://httpbin.org/get', true)
+    request.onload = function() {}
+    request.send()
+  }
+  </script>
 <head>
 <body>
   <!-- Google Tag Manager (noscript) -->
@@ -28,6 +37,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <p>Impact Tech Test</p>
 <p>keyparam</p>
 <p>valueparam</p>
-<button>Fire API GET</button>
+<button type = "button" onclick="fireAPI()">Fire API GET</button>
 </body>
 </html>
