--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       'value': valueparam
     }];
 <!--onclick button -->
-  function fireAPI(key, value){
-    var request = new XMLHttpRequest()
+  function fireAPI(){
     alert("Hello World")
+    var request = new XMLHttpRequest()
     request.open('GET', 'http://httpbin.org/get', true)
     request.onload = function() {
       var data = JSON.parse(this.response)
@@ -39,6 +39,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <p>Impact Tech Test</p>
 <p>keyparam</p>
 <p>valueparam</p>
-<button type = "button" onclick="fireAPI(keyparam,valueparam)">Fire API GET</button>
+<button type = "button" onclick="fireAPI()">Fire API GET</button>
 </body>
 </html>
