--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 <!-- Create and add values for dataLayer -->
 <script>
+  alert("script params")
   keyparam = Request.QueryString(key)
   valueparam = Request.QueryString(value)
   dataLayer = [{
@@ -17,8 +18,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       'value': valueparam
     }];
 </script>
-<script src="impact.js">
-</script>
+<script type="text/javascript" src="impact.js"></script>
 <head>
 <body>
   <!-- Google Tag Manager (noscript) -->
