--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-K3TDRBB');</script>
 <!-- End Google Tag Manager -->
+<!-- Google Ads -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-7860143307735471",
+    enable_page_level_ads: true
+  });
+</script>
+<!-- End Google Ads -->
 <!-- Create and add values for dataLayer -->
 <script>
   keyparam = Request.QueryString(key)
