--- a/index.html
+++ b/index.html
@@ -19,17 +19,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Ads -->
 <!-- Create and add values for dataLayer -->
 <script>
-  //var keyparam = Request.QueryString(key)
-  //var valueparam = Request.QueryString(value)
-  //var dataLayer = [{
-    //  'key': keyparam,
-      //'value': valueparam
-      const params = new URLSearchParams(window.location.search);
-      const keyparam = params.get('key');
-      const valueparam = params.get('value');
-      dataLayer = [{ 'key': keyparam, 'value': valueparam }];
+  const params = new URLSearchParams(window.location.search);
+  const keyparam = params.get('key');
+  const valueparam = params.get('value');
+  dataLayer = [{ 'key': keyparam, 'value': valueparam }];
 </script>
 <script type="text/javascript" src="impact.js"></script>
+<iframe src="demo_iframe.htm" height="200" width="300"></iframe>
 <head>
 <body>
   <!-- Google Tag Manager (noscript) -->
